updated footer and added history page

--- a/styles/master.css
+++ b/styles/master.css
@@ -1,13 +1,11 @@
-footer {
-  background: hsla(0, 100%, 15%);
-}
+
 
 body {
   background-color: hsla(41, 100%, 90%);
 }
 
-/*Navigation Line*/
-hr {
+/*Navigation*/
+hr {/*Navigation Line*/
   opacity: 0.5;
   position: absolute;
   top: 90px;
@@ -20,14 +18,25 @@ hr {
   background-color: hsla(41, 100%, 98);
 }
 
-.footer-text {
-  color: hsla(41, 100%, 98%);
-}
-
 nav li:hover, nav li a:hover {
   background-color: #640E27;
   color: #FFF!important;
 }
+
+/*Footer*/
+footer {
+  background: hsla(0, 100%, 15%);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+}
+
+.footer-text {
+  color: hsla(41, 100%, 98%);
+}
+
+
+
 
 /*Screen size definitions - 1100px*/
 @media screen and (max-width: 1200px){
