--- a/styles/master.css
+++ b/styles/master.css
@@ -1,4 +1,8 @@
-
+/*Defaults*/
+html {
+  margin: 0 0 0 0;
+  padding: 0 0 0 0;
+}
 
 body {
   background-color: hsla(41, 100%, 90%);
@@ -35,10 +39,13 @@ footer {
   color: hsla(41, 100%, 98%);
 }
 
+/*Cards*/
+.card {
+}
 
 
-
-/*Screen size definitions - 1100px*/
+/*Screen size definitions*/
+/*1200px*/
 @media screen and (max-width: 1200px){
   nav li {
     text-align: right;
