--- a/pages/templates/template.html
+++ b/pages/templates/template.html
@@ -69,11 +69,11 @@
     <!-- End of alert section-->
 
     <!-- Parent Container-->
-    <div class="container-lg py-5">
+    <main class="container-fluid py-5">
       <!--*****************************************************************************************************************************************************
       FILL IN CONTENT HERE
       *****************************************************************************************************************************************************-->
-    </div>
+    </main>
     
     <!-- Footer -->
     <footer class="align-bottom">
