--- a/template/cvrr.html
+++ b/template/cvrr.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     
     <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="styles/master.css">
+    <link rel="stylesheet" type="text/css" href="../styles/master.css">
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/60213d849e.js" crossorigin="anonymous"></script>
@@ -36,28 +36,28 @@
           <ul class="navbar-nav ml-auto">
 
             <li class="nav-item">
-              <a class="nav-link active" href="#">Home</a>
+              <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/events.html">Events</a>
+              <a class="nav-link" href="../pages/events.html">Events</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/store.html">Store</a>
+              <a class="nav-link" href="../pages/store.html">Store</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="pages/services.html">Services</a>
+                <a class="nav-link" href="../pages/services.html">Services</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="pages/history.html">History</a>
+                <a class="nav-link" href="../pages/history.html">History</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="pages/cvrr.html">CVRR</a>
+                <a class="nav-link" href="../pages/cvrr.html">CVRR</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="pages/join.html">Join</a>
+                <a class="nav-link" href="../pages/join.html">Join</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="pages/about.html">About</a>
+                <a class="nav-link" href="../pages/about.html">About</a>
             </li>
             <li class="nav-item dropdown dropleft">
                 <a class="nav-link dropdown-toggle " href="#" id="navbardrop" data-toggle="dropdown">
@@ -75,69 +75,20 @@
 
     
 
-    <!-- Alert added here. You can remove or update this section when you please-->
+    <!-- Turn it on??? Alert added here. You can remove or update this section when you please
     <div class="container">
         <div class="alert alert-dismissible">
           <button type="button" class="close" data-dismiss="alert">&times;</button>
           <strong>COVID-19 Update:</strong> Our historic buildings are closed until pandemic eases. Check back for further information.
     </div>
-    <!-- End of alert section-->
+    End of alert section-->
 
     <!-- Parent Container-->
     <div class="container-xl py-2">
 
-      <div class="row py-2">
-        <div class="col-lg-2"><img class='img-circle' src='images/Frankenberger_Tavern.jpg' /></div>
-        <div class="col-lg-10 py-2">
-          <h4>1801 Frankenberger Tavern</h4>
-          <i>217 E Main, Mechanicsburg PA</i>
-          <p>Mechanicsburg's oldest known building. Furnished in 1801 style. <a class="two" href="url">Click here to discover more</a></p>
-        </div>
-      </div>
-      
-      <hr class="dashed">
+        <!--Please insert content here ONLY!-->
 
-      <div class="row py-2">
-        <div class="col-lg-10 py-2">
-          <h4>1801 Frankenberger Tavern</h4>
-          <i>217 E Main, Mechanicsburg PA</i>
-          <p>Mechanicsburg's oldest known building. Furnished in 1801 style. <a class="two" href="url">Click here to discover more</a></p>
-        </div>
-        <div class="col-lg-2"><img class='img-circle-2' src='images/freight_station.jpg' /></div>
-      </div>
-
-      <hr class="dashed">
-
-      <div class="row py-2">
-        <div class="col-lg-2"><img class='img-circle' src='images/Passenger_Station.jpg' /></div>
-        <div class="col-lg-10 py-2">
-          <h4>1801 Frankenberger Tavern</h4>
-          <i>217 E Main, Mechanicsburg PA</i>
-          <p>Mechanicsburg's oldest known building. Furnished in 1801 style. <a class="two" href="url">Click here to discover more</a></p>
-        </div>
-      </div>
-      
-      <hr class="dashed">
-
-      <div class="row py-2">
-        <div class="col-lg-10 py-2">
-          <h4>1801 Frankenberger Tavern</h4>
-          <i>217 E Main, Mechanicsburg PA</i>
-          <p>Mechanicsburg's oldest known building. Furnished in 1801 style. <a class="two" href="url">Click here to discover more</a></p>
-        </div>
-        <div class="col-lg-2"><img class='img-circle-2' src='images/Stationmasters_House.jpg' /></div>
-      </div>
-
-      <hr class="dashed">
-
-      <div class="row py-2">
-        <div class="col-lg-2"><img class='img-circle' src='images/washington_street.jpg' /></div>
-        <div class="col-lg-10 py-2">
-          <h4>1801 Frankenberger Tavern</h4>
-          <i>217 E Main, Mechanicsburg PA</i>
-          <p>Mechanicsburg's oldest known building. Furnished in 1801 style. <a class="two" href="url">Click here to discover more</a></p><br>
-        </div>
-      </div>
+    </div>
 
     <!-- Footer -->
     <footer class="align-bottom">
@@ -170,7 +121,6 @@
         
             </div>
     </footer>
-    
     <!--Copyright Info-->
     <p class="copyright-text">
       © 2005-2021 Mechanicsburg Museum Association. All rights 
