--- a/styles/master.css
+++ b/styles/master.css
@@ -37,6 +37,30 @@ h4 {
   color: hsl(0, 100%, 15%);
 }
 
+.facebookfix {
+  overflow: auto;
+  text-align: center;
+}
+
+.textcenter {
+  text-align: center;
+}
+
+.eventsgroup {
+  padding-bottom: 10px;
+  padding-left: 15px;
+}
+
+.containeralign {
+    text-align: center;
+}
+
+.categories {
+   display: inline-block;
+   margin: 30px;
+}
+
+
 .alert{
     background: hsl(0, 79%, 32%);
     color: hsl(41, 100%, 98%);
