--- a/styles/master.css
+++ b/styles/master.css
@@ -37,6 +37,15 @@ h4 {
   color: hsl(0, 100%, 15%);
 }
 
+.store_images {
+  padding-bottom: 15px;
+  padding-top: 15px;
+}
+
+.store_text {
+  margin-bottom: 20px;
+}
+
 .facebookfix {
   overflow: auto;
   text-align: center;
