--- a/styles/master.css
+++ b/styles/master.css
@@ -37,6 +37,11 @@ h4 {
   color: hsl(0, 100%, 15%);
 }
 
+.news-item {
+  font-size: 1.5em;
+  font-weight: 200;
+}
+
 .store_images {
   padding-bottom: 15px;
   padding-top: 15px;
