--- a/styles/master.css
+++ b/styles/master.css
@@ -139,8 +139,9 @@ h5 {
 }
 
 .img-circle {
-  width: 120px;
-  height: 120px;
+  float: right;
+  width: 240px;
+  height: 240px;
   position: relative;
   overflow: hidden;
   border-radius: 2%;
@@ -148,8 +149,8 @@ h5 {
 
 .img-circle-2 {
     float: right;
-    width: 120px;
-    height: 120px;
+    width: 240px;
+    height: 240px;
     position: relative;
     overflow: hidden;
     border-radius: 2%;
