--- a/styles/master.css
+++ b/styles/master.css
@@ -140,8 +140,8 @@ h5 {
 
 .img-circle {
   float: right;
-  width: 240px;
-  height: 240px;
+  width: 120px;
+  height: 120px;
   position: relative;
   overflow: hidden;
   border-radius: 2%;
@@ -149,8 +149,8 @@ h5 {
 
 .img-circle-2 {
     float: right;
-    width: 240px;
-    height: 240px;
+    width: 120px;
+    height: 120px;
     position: relative;
     overflow: hidden;
     border-radius: 2%;
@@ -167,6 +167,13 @@ a {
 
 .navigation-logo {
   width: 400px;
+}
+
+.banner-image {
+  width: 100%;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media screen and (max-width: 720px) {
